--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner --file pom.xml
+      run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner --file pom.xml -ntp
