--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+      env:
+        API_KEY: ${{ secrets.API_KEY }} 
     - name: Build with Maven
       run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner --file pom.xml -ntp
