--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         API_KEY: ${{ secrets.API_KEY }} 
     - name: Build with Maven
-      run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner --file pom.xml -ntp
+      run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner -Dapi.key=${{ secrets.API_KEY }} --file pom.xml -ntp
