--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,9 @@ jobs:
         API_KEY: ${{ secrets.API_KEY }} 
     - name: Build with Maven
       run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner -Dapi.key=${{ secrets.API_KEY }} --file pom.xml -ntp
+    - name: Archive target
+        uses: actions/upload-artifact@v4
+        with:
+          name: target with only reports
+          path: 
+            target/reports
