--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       - BASE_UI_URL=
       - API_KEY=
       - SELENIUM_REMOTE_URL=http://selenium:4444/wd/hub
-      - TEST_TYPE=${TEST_TYPE}
+      - TEST_TYPE=UI
     volumes:
       - ./reports:/app/target
