--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,8 @@ jobs:
         cache: maven
       env:
         API_KEY: ${{ secrets.API_KEY }} 
+    - name: Set Up Docker Compose
+      run: docker-compose up --build --abort-on-container-exit 
     - name: Build with Maven
       run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner -Dapi.key=${{ secrets.API_KEY }} --file pom.xml -ntp
     - name: Archive target
@@ -37,3 +39,4 @@ jobs:
         name: target with only reports
         path: 
           target/reports/**/*
+          reports/**/*
