--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,10 @@ jobs:
     - name: Build with Maven
       run: mvn test -Dtest=pl.inpost.home.task.runners.ApiTestRunner -Dapi.key=${{ secrets.API_KEY }} --file pom.xml -ntp 
     - name: Set Up Docker Compose
-      run: docker compose up --build --abort-on-container-exit
+      run: docker compose up --build --abort-on-container-exit 
       continue-on-error: true
+      name: run scripts with info
+      run: pwd && ls -a
     - name: Archive target
       if: always()  
       uses: actions/upload-artifact@v4
