--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Set Up Docker Compose
       run: docker compose up --build --abort-on-container-exit 
       continue-on-error: true
-    - name: run scripts with info
-      run: pwd && ls -a
+    - name: debug
+      run: pwd 
     - name: Archive target
       if: always()  
       uses: actions/upload-artifact@v4
