--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
       run: docker compose up --build --abort-on-container-exit 
       continue-on-error: true
     - name: debug
-      run: pwd && ls -a
+      run: ls -a target $$ ls -a reports
     - name: Archive target
       if: always()  
       uses: actions/upload-artifact@v4
