--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,5 +44,5 @@ jobs:
       with:
         name: target with only reports
         path: 
-          target/reports/**/*
-          reports/**/*
+          target/reports/**
+          reports/**
