--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,9 +18,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./
 
     steps:
     - uses: actions/checkout@v4
@@ -47,5 +44,5 @@ jobs:
       with:
         name: target with only reports
         path: 
-          target/reports/**
-          reports/**
+          /home/runner/work/home-task/home-task/target/reports/**
+          /home/runner/work/home-task/home-taskreports/**
