--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,9 +35,9 @@ jobs:
       run: docker compose up --build --abort-on-container-exit 
       continue-on-error: true
     - name: List files in target/
-      run: ls -R target/ || echo "❌ Target directory not found!"
+      run: ls -lR target/ || echo "❌ Target directory not found!"
     - name: List files in reports/
-      run: ls -R reports/ || echo "❌ Target directory not found!"
+      run: ls -lR reports/ || echo "❌ Target directory not found!"
     - name: Archive target
       if: always()  
       uses: actions/upload-artifact@v4
